# nyc-taxi-data

./: .env_example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose-light.yml  docker-compose.yml
docker/entrypoints/: start_airflow_webserver.sh
project/: cfg.py  constants.py  el.py  helpers.py
